--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,15 @@
     "@types/cors": "^2.8.13",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "prisma": "^5.6.0"
+    "morgan": "^1.10.0",
+    "prisma": "^5.6.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "ts-node-dev": "^2.0.0"
   }
 }
